paging service layer